--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
   "name": "yup-es",
+  "description": "es locale for yup",
+  "author": "diegoulloao",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
+  "heywords": [
+    "yup",
+    "locale",
+    "es",
+    "spanish",
+    "español",
+    "translation",
+    "validator",
+    "javascript",
+    "js",
+    "forms"
+  ],
+  "repository": {
+    "url": "https://github.com/diegoulloao/yup-es"
+  },
   "license": "MIT"
 }
