--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "yup-es",
   "description": "es locale for yup",
   "author": "diegoulloao",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "src/index.js",
-  "heywords": [
+  "keywords": [
     "yup",
     "locale",
     "es",
