--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "yup-es",
   "description": "es locale for yup",
   "author": "diegoulloao",
-  "version": "1.0.6",
+  "version": "1.0.7-beta.1",
   "main": "src/index.js",
+  "types": "types/index.d.ts",
   "keywords": [
     "yup",
     "locale",
